chore(sca): # modify SCA cassettes with the right argument

--- a/tests/unit/cassettes/test_tar_sca_files_from_git_repo_branch_with_vuln.yaml
+++ b/tests/unit/cassettes/test_tar_sca_files_from_git_repo_branch_with_vuln.yaml
@@ -1,6 +1,6 @@
 interactions:
   - request:
-      body: '{"touched_files": ["Pipfile", "Pipfile.lock", "dummy_file.py"]}'
+      body: '{"files": ["Pipfile", "Pipfile.lock", "dummy_file.py"]}'
       headers:
         Accept:
           - '*/*'
