--- a/tests/unit/cassettes/test_tar_sca_files_from_git_repo_branch_without_sca.yaml
+++ b/tests/unit/cassettes/test_tar_sca_files_from_git_repo_branch_without_sca.yaml
@@ -1,6 +1,6 @@
 interactions:
   - request:
-      body: '{"touched_files": ["dummy_file.py"]}'
+      body: '{"files": ["dummy_file.py"]}'
       headers:
         Accept:
           - '*/*'
