--- a/tests/unit/cassettes/test_tar_sca_files_from_git_repo_with_staged_files.yaml
+++ b/tests/unit/cassettes/test_tar_sca_files_from_git_repo_with_staged_files.yaml
@@ -1,6 +1,6 @@
 interactions:
   - request:
-      body: '{"touched_files": ["dummy_file.py", "package.json"]}'
+      body: '{"files": ["dummy_file.py", "package.json"]}'
       headers:
         Accept:
           - '*/*'
