fix(sca): #- fix cassettes with wrong argument
Changelog: skip

--- a/tests/unit/cassettes/test_sca_get_scan_all_filepaths.yaml
+++ b/tests/unit/cassettes/test_sca_get_scan_all_filepaths.yaml
@@ -1,6 +1,6 @@
 interactions:
   - request:
-      body: '{"touched_files": ["Pipfile", "Some_other_file.txt"]}'
+      body: '{"files": ["Pipfile", "Some_other_file.txt"]}'
       headers:
         Accept:
           - '*/*'
