--- a/tests/unit/cassettes/test_sca_scan_all_no_file.yaml
+++ b/tests/unit/cassettes/test_sca_scan_all_no_file.yaml
@@ -1,6 +1,6 @@
 interactions:
   - request:
-      body: '{"touched_files": []}'
+      body: '{"files": []}'
       headers:
         Accept:
           - '*/*'
