--- a/tests/unit/cassettes/test_sca_files_from_git_repo_branch_without_sca.yaml
+++ b/tests/unit/cassettes/test_sca_files_from_git_repo_branch_without_sca.yaml
@@ -1,6 +1,6 @@
 interactions:
   - request:
-      body: '{"files": ["Pipfile", "Pipfile.lock", "dummy_file.py"]}'
+      body: '{"files": ["dummy_file.py"]}'
       headers:
         Accept:
           - '*/*'
@@ -9,7 +9,7 @@ interactions:
         Connection:
           - keep-alive
         Content-Length:
-          - '55'
+          - '28'
         Content-Type:
           - application/json
         User-Agent:
@@ -18,20 +18,20 @@ interactions:
       uri: https://api.gitguardian.com/v1/sca/compute_sca_files/
     response:
       body:
-        string: '{"sca_files":["Pipfile","Pipfile.lock"],"potential_siblings":["Pipfile.lock","Pipfile"]}'
+        string: '{"sca_files":[],"potential_siblings":[]}'
       headers:
         access-control-expose-headers:
           - X-App-Version
         allow:
           - POST, OPTIONS
         content-length:
-          - '88'
+          - '40'
         content-type:
           - application/json
         cross-origin-opener-policy:
           - same-origin
         date:
-          - Mon, 07 Aug 2023 15:41:49 GMT
+          - Tue, 08 Aug 2023 07:10:46 GMT
         referrer-policy:
           - strict-origin-when-cross-origin
         server:
@@ -46,7 +46,7 @@ interactions:
           - nosniff
           - nosniff
         x-envoy-upstream-service-time:
-          - '29'
+          - '14'
         x-frame-options:
           - DENY
           - SAMEORIGIN
