--- a/tests/unit/cassettes/test_tar_sca_files_from_git_repo_branch_without_lock.yaml
+++ b/tests/unit/cassettes/test_tar_sca_files_from_git_repo_branch_without_lock.yaml
@@ -9,11 +9,11 @@ interactions:
         Connection:
           - keep-alive
         Content-Length:
-          - '47'
+          - '39'
         Content-Type:
           - application/json
         User-Agent:
-          - pygitguardian/1.8.0 (Linux;py3.10.6)
+          - pygitguardian/1.8.0 (Linux;py3.10.12)
       method: POST
       uri: https://api.gitguardian.com/v1/sca/compute_sca_files/
     response:
@@ -31,7 +31,7 @@ interactions:
         cross-origin-opener-policy:
           - same-origin
         date:
-          - Fri, 30 Jun 2023 13:08:49 GMT
+          - Mon, 07 Aug 2023 15:41:50 GMT
         referrer-policy:
           - strict-origin-when-cross-origin
         server:
@@ -41,7 +41,7 @@ interactions:
         vary:
           - Cookie
         x-app-version:
-          - ec539ba5
+          - v2.36.0
         x-content-type-options:
           - nosniff
           - nosniff
@@ -50,8 +50,10 @@ interactions:
         x-frame-options:
           - DENY
           - SAMEORIGIN
+        x-sca-engine-version:
+          - 1.16.1
         x-secrets-engine-version:
-          - 2.93.0
+          - 2.95.0
         x-xss-protection:
           - 1; mode=block
       status:
