--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -224,6 +224,26 @@ jobs:
         env:
           GITGUARDIAN_API_KEY: ${{ secrets.GITGUARDIAN_API_KEY }}
           GITGUARDIAN_API_URL: ${{ secrets.GITGUARDIAN_API_URL }}
+          # PR Vars
+          GITHUB_PULL_BASE_SHA: ${{ github.event.pull_request.base.sha }}
+          GH_PR_ADDITIONS: ${{ github.event.pull_request.additions }}
+          GH_PR_BASE_LABEL: ${{ github.event.pull_request.base.label }}
+          GH_PR_BASE_REF: ${{ github.event.pull_request.base.ref }}
+          GH_PR_BASE_SHA: ${{ github.event.pull_request.base.sha }}
+          GH_PR_HEAD_LABEL: ${{ github.event.pull_request.head.label }}
+          GH_PR_HEAD_REF: ${{ github.event.pull_request.head.ref }}
+          GH_PR_HEAD_SHA: ${{ github.event.pull_request.head.sha }}
+          GH_PR_MERGE_COMMIT_SHA: ${{ github.event.pull_request.merge_commit_sha }}
+          # Should find how send a list of elements
+          #GH_PR_COMMITS: ${{ github.event.pull_request.commits }}
+          # Push vars
+          GITHUB_PUSH_BEFORE_SHA: ${{ github.event.before }}
+          GITHUB_PUSH_AFTER_SHA: ${{ github.event.after }}
+          GITHUB_PUSH_FORCED: ${{ github.event.forced }}
+          GITHUB_PUSH_BASE_SHA: ${{ github.event.base }}
+          GITHUB_PUSH_REF: ${{ github.event.ref }}
+          #GITHUB_PUSH_COMMITS: ${{ github.event.commits }}
+          GITHUB_DEFAULT_BRANCH: ${{ github.event.repository.default_branch }}
 
   dockerhub-unstable:
     name: Push Docker image to Docker Hub
