--- a/.github/workflows/perfbench.yml
+++ b/.github/workflows/perfbench.yml
@@ -36,7 +36,7 @@ jobs:
         run: |
           python --version
           python -m pip install --upgrade pip
-          python -m pip install --upgrade pipenv
+          python -m pip install pipenv==2022.10.4
           pipenv install --system --skip-lock
 
       - name: Setup benchmark
