chore: Setup import-linter
Import linter will allow us to maintain boundaries between our modules.

This is the first version of the configuration that only configure
boundaries between `cmd` and `verticals` modules and `core`, `utils` and
`pygitguardian`. The `core` module configuration  will be set afterward.

refs #521

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -85,3 +85,21 @@ repos:
       - id: ggshield
         language_version: python3
         stages: [commit]
+
+  - repo: local
+    hooks:
+      - id: import-linter-config
+        name: Import Linter Config Check
+        entry: pipenv run ./scripts/check-import-linter-config.sh
+        language: system
+        pass_filenames: false
+        types: [python]
+        stages: [commit]
+
+      - id: import-linter
+        name: Import Linter
+        entry: pipenv run lint-imports
+        language: system
+        pass_filenames: false
+        types: [python]
+        stages: [commit]
