--- a/Pipfile
+++ b/Pipfile
@@ -22,6 +22,7 @@ pytest-voluptuous = "*"
 seed-isort-config = "*"
 snapshottest = "*"
 typing-extensions = "*"
+import-linter = "*"
 
 vcrpy = ">=4.3.0,!=4.3.1,<4.4.0"
 
