--- a/setup.cfg
+++ b/setup.cfg
@@ -51,7 +51,9 @@ install_requires =
 include_package_data = True
 
 [options.packages.find]
-exclude = tests; tests.*
+exclude =
+    tests
+    tests.*
 
 [options.entry_points]
 console_scripts = ggshield=ggshield.cmd.main:main
