get version from ggshield.__version__

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = ggshield
-version = 1.18.1
+version = attr: ggshield.__version__
 author = GitGuardian
 author_email = support@gitguardian.com
 maintainer = GitGuardian
