--- a/tests/unit/cassettes/test_sca_scan_prepush_no_sca_files.yaml
+++ b/tests/unit/cassettes/test_sca_scan_prepush_no_sca_files.yaml
@@ -1,6 +1,6 @@
 interactions:
   - request:
-      body: '{"files": ["before_hook.txt", "non_sca.txt"]}'
+      body: '{"files": ["non_sca.txt", "before_hook.txt"]}'
       headers:
         Accept:
           - '*/*'
@@ -13,7 +13,7 @@ interactions:
         Content-Type:
           - application/json
         User-Agent:
-          - pygitguardian/1.8.0 (Linux;py3.10.12) ggshield
+          - pygitguardian/1.9.0 (Darwin;py3.11.4) ggshield
       method: POST
       uri: https://api.gitguardian.com/v1/sca/compute_sca_files/
     response:
@@ -31,7 +31,7 @@ interactions:
         cross-origin-opener-policy:
           - same-origin
         date:
-          - Mon, 07 Aug 2023 15:41:00 GMT
+          - Mon, 04 Sep 2023 14:10:21 GMT
         referrer-policy:
           - strict-origin-when-cross-origin
         server:
@@ -41,19 +41,19 @@ interactions:
         vary:
           - Cookie
         x-app-version:
-          - v2.36.0
+          - v2.38.0
         x-content-type-options:
           - nosniff
           - nosniff
         x-envoy-upstream-service-time:
-          - '16'
+          - '13'
         x-frame-options:
           - DENY
           - SAMEORIGIN
         x-sca-engine-version:
           - 1.16.1
         x-secrets-engine-version:
-          - 2.95.0
+          - 2.96.0
         x-xss-protection:
           - 1; mode=block
       status:
