--- a/actions/secret/action.yml
+++ b/actions/secret/action.yml
@@ -9,14 +9,9 @@ branding:
 inputs:
   args:
     description: |
-      Arguments to be passed to ggshield secret scan
-      Options:        
-        --json                        Output results in JSON format  [default: False]
-        --show-secrets                Show secrets in plaintext instead of hiding them.
-        --all-policies                Present fails of all policies (Filenames, FileExtensions,
-                                      Secret Detection). By default, only Secret Detection is shown.
-        --exit-zero                   Always return a 0 (non-error) status code, even if incidents are found.
-        -b, --banlist-detector TEXT   Exclude results from a detector.
+      Arguments to pass to `ggshield secret scan ci`.
+
+      [`ggshield secret scan ci` reference](https://docs.gitguardian.com/ggshield-docs/reference/secret/scan/ci).
     required: false
 
 runs:
