--- a/actions/sca/action.yml
+++ b/actions/sca/action.yml
@@ -5,14 +5,9 @@ author: GitGuardian <support@gitguardian.com>
 inputs:
   args:
     description: |
-      Arguments to be passed to ggshield sca scan
-      Options:
-        --exit-zero                     Always return a 0 (non-error) status code, even if issues
-                                        are found. The env var GITGUARDIAN_EXIT_ZERO can also be used
-                                        to set this option.
-        --minimum-severity              [LOW|MEDIUM|HIGH|CRITICAL]
-                                        Minimum severity of the policies
-        --ignore-path, --ipa PATH       Do not scan the specified paths.
+      Arguments to pass to `ggshield sca scan ci`.
+
+      [`ggshield iac sca ci` reference](https://docs.gitguardian.com/ggshield-docs/reference/sca/scan/ci).
     required: false
 branding:
   icon: 'shield'
