--- a/tests/unit/cassettes/test_sca_scan_directory_invalid_tar.yaml
+++ b/tests/unit/cassettes/test_sca_scan_directory_invalid_tar.yaml
@@ -1,9 +1,9 @@
 interactions:
   - request:
       body:
-        "--f8169c7f7ae836d395a20fbe65b4a2bb\r\nContent-Disposition: form-data; name=\"scan_parameters\"\r\n\r\n{\"minimum_severity\":
-        null, \"ignored_vulnerabilities\": []}\r\n--f8169c7f7ae836d395a20fbe65b4a2bb\r\nContent-Disposition:
-        form-data; name=\"directory\"; filename=\"directory\"\r\n\r\n\r\n--f8169c7f7ae836d395a20fbe65b4a2bb--\r\n"
+        "--4fb28442019ea4ab0fc9e50587ada947\r\nContent-Disposition: form-data; name=\"scan_parameters\"\r\n\r\n{\"minimum_severity\":
+        null, \"ignored_vulnerabilities\": []}\r\n--4fb28442019ea4ab0fc9e50587ada947\r\nContent-Disposition:
+        form-data; name=\"directory\"; filename=\"directory\"\r\n\r\n\r\n--4fb28442019ea4ab0fc9e50587ada947--\r\n"
       headers:
         Accept:
           - '*/*'
@@ -14,9 +14,9 @@ interactions:
         Content-Length:
           - '303'
         Content-Type:
-          - multipart/form-data; boundary=f8169c7f7ae836d395a20fbe65b4a2bb
+          - multipart/form-data; boundary=4fb28442019ea4ab0fc9e50587ada947
         User-Agent:
-          - pygitguardian/1.9.0 (Darwin;py3.11.4)
+          - pygitguardian/1.10.0 (Linux;py3.10.13)
       method: POST
       uri: https://api.gitguardian.com/v1/sca/sca_scan_all/
     response:
@@ -34,7 +34,7 @@ interactions:
         cross-origin-opener-policy:
           - same-origin
         date:
-          - Mon, 04 Sep 2023 14:23:03 GMT
+          - Tue, 26 Sep 2023 13:21:52 GMT
         referrer-policy:
           - strict-origin-when-cross-origin
         server:
@@ -44,18 +44,18 @@ interactions:
         vary:
           - Cookie
         x-app-version:
-          - v2.38.0
+          - v2.39.1
         x-content-type-options:
           - nosniff
           - nosniff
         x-envoy-upstream-service-time:
-          - '23'
+          - '19'
         x-frame-options:
           - DENY
         x-sca-engine-version:
-          - 1.16.1
+          - 1.17.0
         x-secrets-engine-version:
-          - 2.96.0
+          - 2.97.0
         x-xss-protection:
           - 1; mode=block
       status:
