--- a/tests/unit/cassettes/test_sca_scan_prepush_no_sca_files.yaml
+++ b/tests/unit/cassettes/test_sca_scan_prepush_no_sca_files.yaml
@@ -1,6 +1,6 @@
 interactions:
   - request:
-      body: '{"files": ["non_sca.txt", "before_hook.txt"]}'
+      body: '{"files": ["before_hook.txt", "non_sca.txt"]}'
       headers:
         Accept:
           - '*/*'
@@ -13,7 +13,7 @@ interactions:
         Content-Type:
           - application/json
         User-Agent:
-          - pygitguardian/1.9.0 (Darwin;py3.11.4) ggshield
+          - pygitguardian/1.10.0 (Linux;py3.10.13) ggshield
       method: POST
       uri: https://api.gitguardian.com/v1/sca/compute_sca_files/
     response:
@@ -31,7 +31,7 @@ interactions:
         cross-origin-opener-policy:
           - same-origin
         date:
-          - Mon, 04 Sep 2023 14:10:21 GMT
+          - Tue, 26 Sep 2023 13:21:41 GMT
         referrer-policy:
           - strict-origin-when-cross-origin
         server:
@@ -41,7 +41,7 @@ interactions:
         vary:
           - Cookie
         x-app-version:
-          - v2.38.0
+          - v2.39.1
         x-content-type-options:
           - nosniff
           - nosniff
@@ -51,9 +51,9 @@ interactions:
           - DENY
           - SAMEORIGIN
         x-sca-engine-version:
-          - 1.16.1
+          - 1.17.0
         x-secrets-engine-version:
-          - 2.96.0
+          - 2.97.0
         x-xss-protection:
           - 1; mode=block
       status:
