ci(tag): # Unbreak build-packages CI step in tag.yml workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -148,6 +148,7 @@ jobs:
         with:
           fetch-depth: 0
 
+      # Warning: changes on this step should be reflected in workflows/tag.yml
       - name: Install packaging tools
         shell: bash
         run: |
