docs: add schemas for ggshield JSON outputs, test JSON outputs match them
Schemas are present for "secret scan", "quota" and "api-status" commands.

--- a/Pipfile
+++ b/Pipfile
@@ -23,6 +23,7 @@ seed-isort-config = "*"
 snapshottest = "*"
 typing-extensions = "*"
 import-linter = "*"
+jsonschema = "*"
 
 vcrpy = ">=4.3.0,!=4.3.1,<4.4.0"
 
