--- a/tests/unit/cassettes/test_hmsl_quota.yaml
+++ b/tests/unit/cassettes/test_hmsl_quota.yaml
@@ -12,10 +12,12 @@ interactions:
           - '16'
         Content-Type:
           - application/json
+        GGShield-HMSL-Command-Name:
+          - cli_hmsl_quota
         User-Agent:
-          - python-requests/2.31.0
+          - GGShield 1.21.0
       method: POST
-      uri: https://hasmysecretleaked.staging.gitguardian.tech/v1/prefixes
+      uri: https://api.hasmysecretleaked.com/v1/prefixes
     response:
       body:
         string: '{"matches":[]}'
@@ -25,17 +27,19 @@ interactions:
         content-type:
           - application/json
         date:
-          - Tue, 20 Jun 2023 11:48:57 GMT
+          - Tue, 28 Nov 2023 09:00:20 GMT
         ratelimit-limit:
-          - '500'
+          - '50'
         ratelimit-remaining:
-          - '500'
+          - '8'
         ratelimit-reset:
-          - '43861'
+          - '53979'
         server:
           - istio-envoy
+        x-app-version:
+          - 1.9.0
         x-envoy-upstream-service-time:
-          - '6'
+          - '8'
       status:
         code: 200
         message: OK
