chore: Remove mention of GITGUARDIAN_API_URL, now deprecated

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 GITGUARDIAN_API_KEY=__________FILL ME__________
-GITGUARDIAN_API_URL=https://api.gitguardian.com
+GITGUARDIAN_INSTANCE=https://dashboard.gitguardian.com/
 
 # Used by functional tests for the --ignore-known-secrets feature
 # Set this to a single-match secret known by your dashboard
