chore: fix pre-receive docker sample
Propagate GIT_ALTERNATE_OBJECT_DIRECTORIES, GIT_OBJECT_DIRECTORY and
GIT_QUARANTINE_PATH so that git finds the quarantined commits
(see https://git-scm.com/docs/git-receive-pack#_quarantine_environment).

Map PWD to PWD and use it as the work directory so that the path in the
propagated variables exist inside the Docker container.

--- a/doc/pre-receive-docker.sample
+++ b/doc/pre-receive-docker.sample
@@ -9,4 +9,14 @@
 #export GITGUARDIAN_API_KEY=<INSERT YOUR KEY>
 
 set -x
-docker run -i --rm -v $(pwd):/data ggshield -e GIT_PUSH_OPTION_COUNT -e GIT_PUSH_OPTION_0 -e GIT_PUSH_OPTION_1 -e GITGUARDIAN_API_KEY gitguardian/ggshield:latest ggshield secret scan pre-receive
+docker run -i --rm \
+    -v $PWD:$PWD \
+    -w $PWD \
+    -e GITGUARDIAN_API_KEY \
+    -e GIT_PUSH_OPTION_COUNT \
+    -e GIT_PUSH_OPTION_0 \
+    -e GIT_PUSH_OPTION_1 \
+    -e GIT_ALTERNATE_OBJECT_DIRECTORIES \
+    -e GIT_OBJECT_DIRECTORY \
+    -e GIT_QUARANTINE_PATH \
+    gitguardian/ggshield:latest ggshield secret scan pre-receive
