--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -153,6 +153,64 @@ jobs:
           GITGUARDIAN_API_URL: ${{ secrets.GITGUARDIAN_API_URL }}
           TEST_KNOWN_SECRET: ${{ secrets.TEST_KNOWN_SECRET }}
 
+  build-standalone:
+    name: Standalone exe
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-2022]
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          # Get enough commits to run `ggshield secret scan commit-range` on ourselves
+          fetch-depth: 10
+
+      - name: Set up Python 3.9
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.9
+
+      - name: Install normal dependencies
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install --upgrade pipenv==2023.10.3
+          pipenv install --system --dev
+
+      - name: Install standalone-specific dependencies
+        run: |
+          python -m pip install --upgrade pyinstaller
+
+      - name: Build
+        shell: bash
+        run: |
+          scripts/build-standalone-exe
+
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: ggshield-standalone-${{ matrix.os }}
+          path: |
+            dist/ggshield-standalone-*.gz
+            dist/ggshield-standalone-*.zip
+
+      - name: Override base Docker image used for functional tests on Windows
+        if: matrix.os == 'windows-2022'
+        # This is required because GitHub Windows runner is not configured to
+        # run Linux-based Docker images
+        shell: bash
+        run: |
+          echo "GGTEST_DOCKER_IMAGE=mcr.microsoft.com/windows/nanoserver:ltsc2022" >> $GITHUB_ENV
+
+      - name: Functional tests
+        shell: bash
+        run: |
+          scripts/build-standalone-exe functests
+        env:
+          GITGUARDIAN_API_KEY: ${{ secrets.GITGUARDIAN_API_KEY }}
+          GITGUARDIAN_API_URL: ${{ secrets.GITGUARDIAN_API_URL }}
+          TEST_KNOWN_SECRET: ${{ secrets.TEST_KNOWN_SECRET }}
+
   build_packages:
     # This job ensures the build-packages script is tested on each build, not only at release time
     runs-on: ubuntu-latest
