--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -151,6 +151,57 @@ jobs:
           GITGUARDIAN_API_URL: ${{ secrets.GITGUARDIAN_API_URL }}
           TEST_KNOWN_SECRET: ${{ secrets.TEST_KNOWN_SECRET }}
 
+  build-standalone:
+    name: Standalone exe
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-2022]
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          # Get enough commits to run `ggshield secret scan commit-range` on ourselves
+          fetch-depth: 10
+
+      - name: Set up Python 3.9
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.9
+
+      - name: Install normal dependencies
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install --upgrade pipenv==2023.10.3
+          pipenv install --system --dev
+
+      - name: Install standalone-specific dependencies
+        run: |
+          python -m pip install --upgrade pyoxidizer
+
+      - name: Windows setup
+        if: matrix.os == 'windows-2022'
+        run: |
+          choco install upx
+
+      - name: Build
+        shell: bash
+        run: |
+          if [ "${{ matrix.os }}" = "macos-latest" ] ; then
+            opts=--no-upx
+          else
+            opts=""
+          fi
+          scripts/build-standalone-exe $opts
+
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: ggshield-standalone-${{ matrix.os }}
+          path: |
+            dist/ggshield-standalone-*.gz
+            dist/ggshield-standalone-*.zip
+
   build_packages:
     # This job ensures the build-packages script is tested on each build, not only at release time
     runs-on: ubuntu-latest
