--- a/Pipfile
+++ b/Pipfile
@@ -25,12 +25,7 @@ typing-extensions = "*"
 import-linter = "*"
 jsonschema = "*"
 
-vcrpy = ">=4.3.0,!=4.3.1,<4.4.0"
-
-# Pin urllib3 until https://github.com/kevin1024/vcrpy/issues/688 is fixed
-# When you remove this, don't forget to also remove the urllib3 hack in
-# .github/workflow/main.yml
-urllib3 = "<2"
+vcrpy = ">=5.1.0"
 
 pyfakefs = ">=5.2.0"
 scriv = { version = "*", extras = ["toml"] }
