chore(deps): use replace appdirs by platformdirs

--- a/setup.cfg
+++ b/setup.cfg
@@ -36,7 +36,7 @@ python_requires = >=3.8
 packages = find:
 zip_safe = True
 install_requires =
-    appdirs>=1.4.4,<1.5.0
+    platformdirs>=3.0.0,<3.1.0
     charset-normalizer>=3.1.0,<3.2.0
     click>=8.1,<8.2
     cryptography>=41.0.3,<42.0.0
