feat(honeytokens): add honeytoken create-with_context command

--- a/setup.cfg
+++ b/setup.cfg
@@ -43,7 +43,7 @@ install_requires =
     marshmallow>=3.18.0,<3.19.0
     marshmallow-dataclass>=8.5.8,<8.6.0
     oauthlib>=3.2.1,<3.3.0
-    pygitguardian>=1.13.0,<1.14.0
+    pygitguardian @ git+https://github.com/GitGuardian/py-gitguardian.git@d3634704188b7f95036b8753b4dbc77217ebcf12
     pyjwt>=2.6.0,<2.7.0
     python-dotenv>=0.21.0,<0.22.0
     pyyaml>=6.0.1,<6.1
