--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -94,7 +94,7 @@ jobs:
 
       - name: Use Pipfile.lock on locked version of Python
         # Keep version in sync with scripts/update-pipfile-lock/Dockerfile
-        if: matrix.python-version == '3.9'
+        if: matrix.python-version == '3.10'
         run: |
           echo "PIPENV_SKIP_LOCK=0" >> $GITHUB_ENV
 
@@ -159,23 +159,30 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-2022]
+        os:
+          - ubuntu-latest
+          - macos-latest
+          - windows-2022
+          - macos-14
     steps:
       - uses: actions/checkout@v4
         with:
           # Get enough commits to run `ggshield secret scan commit-range` on ourselves
           fetch-depth: 10
 
-      - name: Set up Python 3.9
+      - name: Set up Python 3.10
         uses: actions/setup-python@v4
         with:
-          python-version: 3.9
+          python-version: '3.10'
 
       - name: Install normal dependencies
         run: |
           python -m pip install --upgrade pip
           python -m pip install --upgrade pipenv==2023.10.3
           pipenv install --system --dev
+        env:
+          # Disable lock otherwise Windows-only dependencies like colorama are not installed
+          PIPENV_SKIP_LOCK: 1
 
       - name: Install standalone-specific dependencies
         run: |
