chore: pin pyinstaller version
Just in case: better avoid breaking changes at release time.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -186,7 +186,7 @@ jobs:
 
       - name: Install standalone-specific dependencies
         run: |
-          python -m pip install --upgrade pyinstaller
+          python -m pip install pyinstaller==6.5.0
 
       - name: Build
         shell: bash
