ci: add code to sign, notarize and staple macos zip

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -199,6 +199,7 @@ jobs:
           name: ggshield-standalone-${{ matrix.os }}
           path: |
             dist/ggshield-standalone-*.gz
+            dist/ggshield-standalone-*.pkg
             dist/ggshield-standalone-*.zip
 
       - name: Override base Docker image used for functional tests on Windows
