--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -164,8 +164,14 @@ jobs:
           - os: windows-2022
           - os: macos-latest
             arch: x86_64
+            sha256sum:
+              python: a41c1e28e2a646bac69e023873d40a43c5958d251c6adfa83d5811a7cb034c7a
+              rcodesign: bca6e648afaddd48f1c3d5dd25aa516659992cbbd2ba7131ba6add739aa895d3
           - os: macos-14
             arch: aarch64
+            sha256sum:
+              python: 57b83a4aa32bdbe7611f1290313ef24f2574dff5fa59181c0ccb26c14c688b73
+              rcodesign: 163520079cd6ad1427791c792735a6ddfcb8eca0187bbcf0cc0bebfa4a62153d
     steps:
       - uses: actions/checkout@v4
         with:
@@ -174,24 +180,45 @@ jobs:
 
       - name: Set up Python 3.10
         uses: actions/setup-python@v4
-        if: matrix.os != 'macos-14'
+        if: "!startsWith(matrix.os, 'macos-')"
         with:
           python-version: '3.10'
 
-      - name: Set up Python 3.10 (Mac ARM)
-        if: matrix.os == 'macos-14'
+      - name: Install macOS specific dependencies
+        if: startsWith(matrix.os, 'macos-')
         run: |
-          VERSION=3.10.13
-          BUILD=20240224
+          # scripts/download needs the `sha256sum` command
+          brew install coreutils
 
-          curl --fail --location \
-            --output python.tar.zst \
-            https://github.com/indygreg/python-build-standalone/releases/download/${BUILD}/cpython-${VERSION}+${BUILD}-aarch64-apple-darwin-pgo+lto-full.tar.zst
-          # TODO verify checksum
+          # Install Python. We don't want to use actions/setup-python because
+          # (at least for @v4) it installs the Framework version of Python on
+          # M1 macs, and the binaries produced with that version do not pass
+          # Apple notarization step.
+          PYTHON_VERSION=3.10.13
+          PYTHON_BUILD=20240224
+
+          scripts/download \
+            https://github.com/indygreg/python-build-standalone/releases/download/${PYTHON_BUILD}/cpython-${PYTHON_VERSION}+${PYTHON_BUILD}-${{ matrix.arch }}-apple-darwin-pgo+lto-full.tar.zst \
+            python.tar.zst \
+            ${{ matrix.sha256sum.python }}
+
           tar xf python.tar.zst
 
-          # Make it available
+          # Make Python available
           echo PATH=$PWD/python/install/bin:$PATH >> $GITHUB_ENV
+
+          # Install rcodesign
+          RCODESIGN_VERSION=0.27.0
+
+          scripts/download \
+            https://github.com/indygreg/apple-platform-rs/releases/download/apple-codesign%2F${RCODESIGN_VERSION}/apple-codesign-${RCODESIGN_VERSION}-${{ matrix.arch }}-apple-darwin.tar.gz \
+            rcodesign.tar.gz \
+            ${{ matrix.sha256sum.rcodesign }}
+
+          tar --strip-components=1 -xzf rcodesign.tar.gz
+
+          # Make it available
+          cp rcodesign /usr/local/bin
 
       - name: Install normal dependencies
         run: |
@@ -205,19 +232,6 @@ jobs:
       - name: Install standalone-specific dependencies
         run: |
           python -m pip install pyinstaller==6.5.0
-
-      - name: Install macOS standalone-specific dependencies
-        if: startsWith(matrix.os, 'macos-')
-        run: |
-          VERSION=0.27.0
-
-          curl --fail --location \
-            --output rcodesign.tar.gz \
-            https://github.com/indygreg/apple-platform-rs/releases/download/apple-codesign%2F${VERSION}/apple-codesign-${VERSION}-${{ matrix.arch }}-apple-darwin.tar.gz
-
-          # TODO verify checksum
-          tar --strip-components=1 -xzf rcodesign.tar.gz
-          cp rcodesign /usr/local/bin
 
       - name: Prepare macOS secrets
         if: startsWith(matrix.os, 'macos-')
