chore: shorten archive names: remove the "-standalone" part
Filenames are already long enough, no need for this "-standalone" part.

--- a/.github/workflows/sign.yml
+++ b/.github/workflows/sign.yml
@@ -117,11 +117,11 @@ jobs:
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: ggshield-standalone-${{ matrix.os }}
+          name: ggshield-${{ matrix.os }}
           path: |
-            dist/ggshield-standalone-*.gz
-            dist/ggshield-standalone-*.pkg
-            dist/ggshield-standalone-*.zip
+            dist/ggshield-*.gz
+            dist/ggshield-*.pkg
+            dist/ggshield-*.zip
 
       - name: Override base Docker image used for functional tests on Windows
         if: matrix.os == 'windows-2022'
