chore: update Black to 24.3.0
This required disabling E704 in flake8. That seems to be expected:
https://github.com/psf/black/issues/3887

--- a/setup.cfg
+++ b/setup.cfg
@@ -63,5 +63,5 @@ console_scripts = ggshield=ggshield.__main__:main
 [flake8]
 inline-quotes = double
 max-line-length = 120
-ignore = E203, W503
+ignore = E203, E704, W503
 exclude = **/snapshots/*.py, .venv, build
