--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -21,10 +21,11 @@ jobs:
         with:
           python-version: '3.x'
 
-      - name: Download packages
+      - name: Download wheel and sdist
         uses: actions/download-artifact@v4
         with:
-          name: packages
+          name: dist
+          path: dist
 
       - name: Publish distribution 📦 to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
@@ -54,11 +55,6 @@ jobs:
         run: |
           echo "tag=${GITHUB_REF/refs\/tags\//}" >> $GITHUB_OUTPUT
 
-      - name: Download packages
-        uses: actions/download-artifact@v4
-        with:
-          name: packages
-
       - name: Download standalone binaries
         uses: actions/download-artifact@v4
         with:
@@ -78,10 +74,11 @@ jobs:
         run: |
           gh release upload \
             ${{ steps.tags.outputs.tag }} \
-            packages/ggshield-*.pyz \
-            packages/ggshield_*.deb \
-            packages/ggshield-*.rpm \
             standalone-binaries/ggshield-*.pkg
+
+            # TODO: going to be brought back in next commits
+            # packages/ggshield_*.deb \
+            # packages/ggshield-*.rpm \
 
   push_to_docker_hub:
     name: Push Docker image to Docker Hub
@@ -144,24 +141,25 @@ jobs:
 
           git push
 
-  push_to_cloudsmith:
-    needs: build_release_assets
-    runs-on: ubuntu-22.04
-    if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags')
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Download packages
-        uses: actions/download-artifact@v4
-        with:
-          name: packages
-
-      - name: Install Cloudsmith CLI
-        run: pip install cloudsmith-cli
-
-      - name: Push to Cloudsmith
-        run: |
-          scripts/push-to-cloudsmith
-        env:
-          CLOUDSMITH_API_KEY: ${{ secrets.CLOUDSMITH_API_KEY }}
+# TODO: going to be brought back in next commits
+#  push_to_cloudsmith:
+#    needs: build_release_assets
+#    runs-on: ubuntu-22.04
+#    if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags')
+#    steps:
+#      - name: Checkout
+#        uses: actions/checkout@v4
+#
+#      - name: Download packages
+#        uses: actions/download-artifact@v4
+#        with:
+#          name: packages
+#
+#      - name: Install Cloudsmith CLI
+#        run: pip install cloudsmith-cli
+#
+#      - name: Push to Cloudsmith
+#        run: |
+#          scripts/push-to-cloudsmith
+#        env:
+#          CLOUDSMITH_API_KEY: ${{ secrets.CLOUDSMITH_API_KEY }}
